k8s/01-namespace.yaml
# ================================================================================================
# Defining the default namespace (aegis)
# ================================================================================================

apiVersion: v1
kind: Namespace
metadata:
  name: aegis
