k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: aegis

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      serviceAccountName: backend-sa

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000

      containers:

        - name: backend

          image: gcrbr/backend:latest

          ports:
            - containerPort: 5000


          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"


          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true

          volumeMounts:
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: tmp
          emptyDir: {}


          livenessProbe:

            httpGet:
              path: /api/health
              port: 5000

            initialDelaySeconds: 10
            periodSeconds: 15


          readinessProbe:

            httpGet:
              path: /api/ready
              port: 5000

            initialDelaySeconds: 5
            periodSeconds: 10
