k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: aegis


spec:

  replicas: 2

  selector:

    matchLabels:
      app: frontend


  template:

    metadata:

      labels:
        app: frontend


    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101

      containers:

        - name: frontend

          image: gcrbr/frontend:latest


          ports:

            - containerPort: 80


          resources:

            requests:

              cpu: "50m"
              memory: "64Mi"


            limits:

              cpu: "200m"
              memory: "256Mi"


          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true

          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: cache
              mountPath: /var/cache/nginx
            - name: run
              mountPath: /var/run

      volumes:
        - name: tmp
          emptyDir: {}
        - name: cache
          emptyDir: {}
        - name: run
          emptyDir: {}
