k8s/07-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: aegis

spec:
  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432
